# CompletedProjectsBsdi

./: .gitattributes  .gitignore  README.md  index.html  package-lock.json  package.json  render.yaml  tailwind.config.js  vite.config.js
docs/: OPERATIONS.md
public/brand/: ATTRIBUTION.md
public/database/: bsdi-db.json
public/database/media/p1-rakshan-division-nushki-s265-solarization-of-existing-5-x-tws-in-qaziab/: p1-rakshan-division-nushki-s265-solarization-of-existing-5-x-tws-in-qaziab-vid-01.m4v
public/database/media/p1-zhob-division-sherani-s333-const-of-protection-wall-killi-qurai-wasta/: p1-zhob-division-sherani-s333-const-of-protection-wall-killi-qurai-wasta-vid-01.m4v
public/database/media/p1-zhob-division-zhob-s348-repair-and-rehabilitation-of-04-no-civil-d/: p1-zhob-division-zhob-s348-repair-and-rehabilitation-of-04-no-civil-d-vid-01.m4v
scripts/: extract-ppt-data.ps1
server/: google-sheet-sync.js  index.js  media-library.js  ppt-report.js  ppt-template-report.js  report.js  storage.js
src/: App.jsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tmp/google-sheet-review/: audit-progress-export.ps1  count-district-progress.ps1  district-completion-summary.json  export-progress-projects.ps1  import-80-plus-to-db.cjs  master-completed-projects.json  progress-80-plus-projects.csv  progress-80-plus-projects.json  progress-80-plus-report.md  progress-80-plus-summary.csv
