[package]
name = "bsdi-dashboard"
version = "0.1.0"
description = "BSDI Completed Projects Dashboard"
authors = ["BSDI"]
edition = "2021"

[lib]
name = "bsdi_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
